if image is All, it get assigned to product.images after create, thumbnails view makes sure not to output variant image if it is also included in product.images

--- a/app/views/spree/products/_thumbnails.html.erb
+++ b/app/views/spree/products/_thumbnails.html.erb
@@ -9,6 +9,7 @@
 
     <% if @product.has_variants? %>
       <% @product.all_images.each do |i| %>
+      <% next if @product.images.include?(i) %>
           <li class='vtmb <% i.assignments.each do |variant| %>tmb-<%= variant.id %> <% end %>'>
             <%= link_to(image_tag(i.attachment.url(:mini)), i.attachment.url(:product)) %>
           </li>
